Removing numpy arrays from fitbit data structures

--- a/notebooks/scatter_plots.ipynb
+++ b/notebooks/scatter_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -191,7 +191,7 @@
        "DaxpU7eFAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1075e09d0>"
+       "<matplotlib.figure.Figure at 0x107711950>"
       ]
      },
      "metadata": {},
@@ -347,7 +347,7 @@
        "MzMA/j+/UqZqMEInbQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10769cf90>"
+       "<matplotlib.figure.Figure at 0x1077cff10>"
       ]
      },
      "metadata": {},
@@ -510,7 +510,7 @@
        "R04UZmbWkROFmZl15ERhZmYd/X9zCPpWvPVh9AAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107832b10>"
+       "<matplotlib.figure.Figure at 0x107854c50>"
       ]
      },
      "metadata": {},
@@ -671,7 +671,7 @@
        "EeZKwMxshLkSMDMbYa4EzMxG2P8HzozFmeIzSHAAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107a2b0d0>"
+       "<matplotlib.figure.Figure at 0x107a59090>"
       ]
      },
      "metadata": {},
@@ -839,7 +839,7 @@
        "ZtbBlYOZmXVw5WBmZh1cOZiZWQdXDmZm1sGVg5mZdfj/JEhgSJc+qWAAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107b48750>"
+       "<matplotlib.figure.Figure at 0x107b776d0>"
       ]
      },
      "metadata": {},
@@ -1006,7 +1006,7 @@
        "M2vh5GBmZi2cHMzMrIWTg5mZtfj/Sf94/BKWRSYAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107a69f10>"
+       "<matplotlib.figure.Figure at 0x107a995d0>"
       ]
      },
      "metadata": {},
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1210,7 +1210,7 @@
        "lnPhYmZmLefCxczMWs6Fi5mZtdz/BxUHRzazO4RdAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10781f690>"
+       "<matplotlib.figure.Figure at 0x10771bdd0>"
       ]
      },
      "metadata": {},
@@ -1359,7 +1359,7 @@
        "NxRmZtbS/wd33Jm9pESNVwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10760c350>"
+       "<matplotlib.figure.Figure at 0x107905910>"
       ]
      },
      "metadata": {},
@@ -1505,7 +1505,7 @@
        "/weAn2GX+2EIeQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1079ed5d0>"
+       "<matplotlib.figure.Figure at 0x1078e7390>"
       ]
      },
      "metadata": {},
@@ -1696,7 +1696,7 @@
        "mJlZxzlzMTOzjnPmYmZmHefMxczMOu7/Axi8+s5t6p1cAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107844390>"
+       "<matplotlib.figure.Figure at 0x107871310>"
       ]
      },
      "metadata": {},
@@ -1859,7 +1859,7 @@
        "zMwG5kLEzMwG5kLEzMwG5kLEzMwG5kLEzMwG5kLEzMwG9v8B1GbTXienC1MAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107f521d0>"
+       "<matplotlib.figure.Figure at 0x107f7c150>"
       ]
      },
      "metadata": {},
@@ -2041,7 +2041,7 @@
        "iJiZWd9ciJiZWd/+P+OFukY2AggPAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10817cd90>"
+       "<matplotlib.figure.Figure at 0x1080a6d10>"
       ]
      },
      "metadata": {},
@@ -2206,7 +2206,7 @@
        "ZtYTJxIzM+uJE4mZmfXEicTMzHry/wGvN4/DCYjZJAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10829ae10>"
+       "<matplotlib.figure.Figure at 0x1081c1d90>"
       ]
      },
      "metadata": {},
@@ -2394,7 +2394,7 @@
        "AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1083c7ed0>"
+       "<matplotlib.figure.Figure at 0x108544e50>"
       ]
      },
      "metadata": {},
@@ -2555,7 +2555,7 @@
        "YII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1084eecd0>"
+       "<matplotlib.figure.Figure at 0x108664c50>"
       ]
      },
      "metadata": {},
@@ -2712,7 +2712,7 @@
        "uXiYmVmQ4uBDAAAAGElEQVRtLh5mZlabi4eZmdXm4mFmZrX9f3HgjYnE9WVdAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10874e510>"
+       "<matplotlib.figure.Figure at 0x1087b4290>"
       ]
      },
      "metadata": {},
@@ -2914,7 +2914,7 @@
        "iZmZdcyFiZmZdez/AwuE4zNX7SQSAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108540710>"
+       "<matplotlib.figure.Figure at 0x1087450d0>"
       ]
      },
      "metadata": {},
@@ -3093,7 +3093,7 @@
        "gg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107f5cbd0>"
+       "<matplotlib.figure.Figure at 0x107f85790>"
       ]
      },
      "metadata": {},
@@ -3286,7 +3286,7 @@
        "WWkuNMzMrDQXGmZmVpoLDTMzK+2/AdnIYPoyO6iuAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107a0c590>"
+       "<matplotlib.figure.Figure at 0x107b48450>"
       ]
      },
      "metadata": {},
@@ -3489,7 +3489,7 @@
        "zErhCsXMzErhCsXMzErx/wFoY/hq1heAPQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108785610>"
+       "<matplotlib.figure.Figure at 0x108684350>"
       ]
      },
      "metadata": {},
@@ -3643,7 +3643,7 @@
        "QCnQlgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1076698d0>"
+       "<matplotlib.figure.Figure at 0x107852850>"
       ]
      },
      "metadata": {},
@@ -3844,7 +3844,7 @@
        "AElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1083adf90>"
+       "<matplotlib.figure.Figure at 0x107937f10>"
       ]
      },
      "metadata": {},
@@ -4017,7 +4017,7 @@
        "4MLBzMwm+P9HRa0LAd3KgwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10819b390>"
+       "<matplotlib.figure.Figure at 0x107fdc310>"
       ]
      },
      "metadata": {},
@@ -4208,7 +4208,7 @@
        "AcFeTyXxAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1078c5290>"
+       "<matplotlib.figure.Figure at 0x107895ed0>"
       ]
      },
      "metadata": {},
@@ -4383,7 +4383,7 @@
        "WgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10815b850>"
+       "<matplotlib.figure.Figure at 0x107a117d0>"
       ]
      },
      "metadata": {},
@@ -4582,7 +4582,7 @@
        "mJlZaa40zMystP8PU/YNzjV0Xw4AAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108369e10>"
+       "<matplotlib.figure.Figure at 0x10806ad90>"
       ]
      },
      "metadata": {},
@@ -4774,7 +4774,7 @@
        "/wcSusw8RRkCwgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107ca7110>"
+       "<matplotlib.figure.Figure at 0x107ccef90>"
       ]
      },
      "metadata": {},
@@ -4942,7 +4942,7 @@
        "AAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107f11690>"
+       "<matplotlib.figure.Figure at 0x107dc2e50>"
       ]
      },
      "metadata": {},
@@ -5122,7 +5122,7 @@
        "lgsKMzNrywWFmZm15YLCzMzackFhZmZt/X9jy4HagI6nWAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108490b90>"
+       "<matplotlib.figure.Figure at 0x1080d6d50>"
       ]
      },
      "metadata": {},
@@ -5288,7 +5288,7 @@
        "gAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107827650>"
+       "<matplotlib.figure.Figure at 0x107858050>"
       ]
      },
      "metadata": {},
@@ -5477,7 +5477,7 @@
        "RK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1087d1fd0>"
+       "<matplotlib.figure.Figure at 0x107cdfa50>"
       ]
      },
      "metadata": {},
@@ -5666,7 +5666,7 @@
        "TkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107a79d50>"
+       "<matplotlib.figure.Figure at 0x107c10e10>"
       ]
      },
      "metadata": {},
@@ -5871,7 +5871,7 @@
        "AABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108483a90>"
+       "<matplotlib.figure.Figure at 0x107a58a10>"
       ]
      },
      "metadata": {},
@@ -6059,7 +6059,7 @@
        "gg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107940f90>"
+       "<matplotlib.figure.Figure at 0x107b68fd0>"
       ]
      },
      "metadata": {},
@@ -6268,7 +6268,7 @@
        "VglXKGZmVglXKGZmVglXKGZmVglXKGZmVglXKGZmVon/DxtdemA5TJSKAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107b30650>"
+       "<matplotlib.figure.Figure at 0x1086a9e10>"
       ]
      },
      "metadata": {},
@@ -6457,7 +6457,7 @@
        "ckZhZmYdOaMwM7OOnFGYmVlHzijMzKyj/w8vAjaCCMwVoQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108746910>"
+       "<matplotlib.figure.Figure at 0x1087c3890>"
       ]
      },
      "metadata": {},
@@ -6643,7 +6643,7 @@
        "zMwqcYFhZmaVuMAwM7NK/j8IuF+KgR55IQAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1078ca550>"
+       "<matplotlib.figure.Figure at 0x1088064d0>"
       ]
      },
      "metadata": {},
@@ -6851,7 +6851,7 @@
        "ZtYxVyJmZtYxVyJmZtYxVyJmZtax/w9iMQneY8Yt1gAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1084dad10>"
+       "<matplotlib.figure.Figure at 0x1083e5c90>"
       ]
      },
      "metadata": {},
@@ -7051,7 +7051,7 @@
        "1hFXIGZm1hFXIGZm1hFXIGZm1hFXIGZm1hFXIGZm1pH/D6D5wSHkVjhFAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108792450>"
+       "<matplotlib.figure.Figure at 0x108813f10>"
       ]
      },
      "metadata": {},
@@ -7255,7 +7255,7 @@
        "FzMzK5yTi5mZFc7JxczMCufkYmZmhfv//8ERJ0mCUGsAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107652bd0>"
+       "<matplotlib.figure.Figure at 0x10780afd0>"
       ]
      },
      "metadata": {},
@@ -7419,7 +7419,7 @@
        "jgAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x108167e90>"
+       "<matplotlib.figure.Figure at 0x1081c01d0>"
       ]
      },
      "metadata": {},
@@ -7584,7 +7584,7 @@
        "nFDMzKwtnFDMzKwtnFDMzKwtnFDMzKwtnFDMzKwt/h+J7q1BWF5qvwAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10876ac10>"
+       "<matplotlib.figure.Figure at 0x1077373d0>"
       ]
      },
      "metadata": {},
@@ -7739,7 +7739,7 @@
        "nAAAAABJRU5ErkJggg==\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107863890>"
+       "<matplotlib.figure.Figure at 0x1087dcfd0>"
       ]
      },
      "metadata": {},
@@ -7908,7 +7908,7 @@
        "yP8HPg3i0xo92n4AAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1076d7ad0>"
+       "<matplotlib.figure.Figure at 0x107853bd0>"
       ]
      },
      "metadata": {},
@@ -8085,7 +8085,7 @@
        "cKsAAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1079eee90>"
+       "<matplotlib.figure.Figure at 0x108150f90>"
       ]
      },
      "metadata": {},
@@ -8259,7 +8259,7 @@
        "s4acJMzMrKH/D5Mn7WreVc0QAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107637f10>"
+       "<matplotlib.figure.Figure at 0x10798de50>"
       ]
      },
      "metadata": {},
@@ -8424,7 +8424,7 @@
        "K8QdhpmZFeIOw8zMCnGHYWZmhbjDMDOzQv4/0jh0OkqS3q8AAAAASUVORK5CYII=\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x107946a50>"
+       "<matplotlib.figure.Figure at 0x10790db50>"
       ]
      },
      "metadata": {},
@@ -8440,6 +8440,93 @@
     "plotter.plot_data_frame(allData,x='Minutes Awake',y='Minutes Very Active',kind='scatter')\n",
     "plotter.plot_data_frame(allData,x='Number of Awakenings',y='Minutes Very Active',kind='scatter')\n",
     "plotter.plot_data_frame(allData,x='Time in Bed',y='Minutes Very Active',kind='scatter')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": [
+       "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\n",
+       "AAALEgAACxIB0t1+/AAADWRJREFUeJzt3V+InXedx/H3Z5NWKGy3SqAXSaSuhm5daKlirLqLIy0Y\n",
+       "e2HBhS3xz+IfsCxE9s66Xtjc6LJ3IoUSQi1emQstbHYpLYIOSmlrA/bfNimJWkhSKbbWItKLBL97\n",
+       "Maeds9PMnD85c87km/cLAnnm+fWZb37MvPv0OXPSVBWSpF7+atEDSJJmz7hLUkPGXZIaMu6S1JBx\n",
+       "l6SGjLskNTQy7km+n+TlJM9usOZ7SU4meTrJzbMdUZI0qXHu3B8A9q13MsntwPuqag/wVeC+Gc0m\n",
+       "SZrSyLhX1S+A1zZY8mngB4O1TwDXJLl2NuNJkqYxi2fuO4HTQ8dngF0zuK4kaUqzekE1a479Ow0k\n",
+       "aYG2z+AaZ4HdQ8e7Bh/7f5IYfEmaQlWtvYEeaRZxPwocAI4kuQX4Y1W9fKGF0wzYUZKDVXVw0XNs\n",
+       "Be7FKvdilXuxatob45FxT/JD4OPAjiSngXuAKwCq6lBVPZTk9iSngD8DX5pmEEnS7IyMe1XtH2PN\n",
+       "gdmMI0maBd+huhjLix5gC1le9ABbyPKiB9hClhc9wKUu8/qfdSQpn7lL0mSmbad37pLUkHGXpIaM\n",
+       "uyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPG\n",
+       "XZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHj\n",
+       "LkkNGXdJasi4S1JDxl2SGjLuktSQcZekhkbGPcm+JCeSnExy9wXO70jycJKnkjyX5IubMqkkaWyp\n",
+       "qvVPJtuAF4DbgLPAk8D+qjo+tOYg8I6q+vckOwbrr62q82uuVVWV2f8RJKmvads56s59L3Cqql6s\n",
+       "qnPAEeCONWt+B1w9+P3VwKtrwy5Jmq/tI87vBE4PHZ8BPrxmzWHgp0leAv4a+OfZjSdJmsaouK//\n",
+       "zGbVN4GnqmopyXuBnyS5qar+tHbh4BHOm5arannsSSXpMpBkCVi62OuMivtZYPfQ8W5W7t6HfRT4\n",
+       "NkBV/TrJb4HrgWNrL1ZVB6eeVJIuA4Ob3uU3j5PcM811Rj1zPwbsSXJdkiuBO4Gja9acYOUFV5Jc\n",
+       "y0rYfzPNMJKk2djwzr2qzic5ADwCbAPur6rjSe4anD8EfAd4IMnTrPzL4utV9YdNnluStIENfxRy\n",
+       "pp/IH4WUpIlt1o9CSpIuQcZdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLu\n",
+       "ktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3\n",
+       "SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktTQyLgn2Zfk\n",
+       "RJKTSe5eZ81Skl8leS7J8synlCRNJFW1/slkG/ACcBtwFngS2F9Vx4fWXAM8Cnyyqs4k2VFVr1zg\n",
+       "WlVVmfUfQJI6m7ado+7c9wKnqurFqjoHHAHuWLPms8CPq+oMwIXCLkmar1Fx3wmcHjo+M/jYsD3A\n",
+       "u5L8LMmxJF+Y5YCSpMltH3F+/Wc2q64APgDcClwFPJbk8ao6ebHDSZKmMyruZ4HdQ8e7Wbl7H3Ya\n",
+       "eKWq3gDeSPJz4CbgbXFPcnDocLmqlicdWJI6S7IELF30dUa8oLqdlRdUbwVeAn7J219Q/TvgXuCT\n",
+       "wDuAJ4A7q+r5NdfyBVVJmtC07dzwzr2qzic5ADwCbAPur6rjSe4anD9UVSeSPAw8A/wFOLw27JKk\n",
+       "+drwzn2mn8g7d0ma2Gb9KKQk6RJk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTc\n",
+       "Jakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLu\n",
+       "ktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3\n",
+       "SWpoZNyT7EtyIsnJJHdvsO5DSc4n+cxsR5QkTWrDuCfZBtwL7APeD+xPcsM66/4TeBjIJswpSZrA\n",
+       "qDv3vcCpqnqxqs4BR4A7LrDua8CPgN/PeD5J0hRGxX0ncHro+MzgY29JspOV4N83+FDNbDpJ0lRG\n",
+       "xX2cUH8X+EZVFSuPZHwsI0kLtn3E+bPA7qHj3azcvQ/7IHAkCcAO4FNJzlXV0bUXS3Jw6HC5qpYn\n",
+       "HViSOkuyBCxd9HVWbrjX/STbgReAW4GXgF8C+6vq+DrrHwD+u6oevMC5qirv6iVpAtO2c8M796o6\n",
+       "n+QA8AiwDbi/qo4nuWtw/tBU00qSNtWGd+4z/UTeuUvSxKZtp+9QlaSGjLskNWTcJakh4y5JDRl3\n",
+       "SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLuktSQcZekhoy7\n",
+       "JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3SWrIuEtSQ8Zd\n",
+       "khoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNjRX3JPuSnEhyMsndFzj/uSRPJ3kmyaNJbpz9qJKkcaWq\n",
+       "Nl6QbANeAG4DzgJPAvur6vjQmo8Az1fV60n2AQer6pY116mqyqz/AJLU2bTtHOfOfS9wqqperKpz\n",
+       "wBHgjuEFVfVYVb0+OHwC2DXpIJKk2Rkn7juB00PHZwYfW89XgIcuZihJ0sXZPsaajZ/bDEnyCeDL\n",
+       "wMfWOX9w6HC5qpbHvbYkXQ6SLAFLF3udceJ+Ftg9dLyblbv3tQPdCBwG9lXVaxe6UFUdnGJGSbps\n",
+       "DG56l988TnLPNNcZ57HMMWBPkuuSXAncCRwdXpDk3cCDwOer6tQ0g0iSZmfknXtVnU9yAHgE2Abc\n",
+       "X1XHk9w1OH8I+BbwTuC+JADnqmrv5o0tSdrIyB+FnNkn8kchJWlim/mjkJKkS4xxl6SGjLskNWTc\n",
+       "Jakh4y5JDRl3SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqSHjLkkNGXdJasi4S1JDxl2SGjLu\n",
+       "ktSQcZekhoy7JDVk3CWpIeMuSQ0Zd0lqyLhLUkPGXZIaMu6S1JBxl6SGjLskNWTcJakh4y5JDRl3\n",
+       "SWrIuEtSQ8Zdkhoy7pLUkHGXpIaMuyQ1NDLuSfYlOZHkZJK711nzvcH5p5PcPPsxJUmT2DDuSbYB\n",
+       "9wL7gPcD+5PcsGbN7cD7qmoP8FXgvk2atY0kS4ueYatwL1a5F6vci4s36s59L3Cqql6sqnPAEeCO\n",
+       "NWs+DfwAoKqeAK5Jcu3MJ+1ladEDbCFLix5gC1la9ABbyNKiB7jUjYr7TuD00PGZwcdGrdl18aNJ\n",
+       "kqY1Ku415nUy5T8nSdoE20ecPwvsHjrezcqd+UZrdg0+9jZJjP5AknsWPcNW4V6sci9WuRcXZ1Tc\n",
+       "jwF7klwHvATcCexfs+YocAA4kuQW4I9V9fLaC1XV2rt7SdIm2TDuVXU+yQHgEWAbcH9VHU9y1+D8\n",
+       "oap6KMntSU4Bfwa+tOlTS5I2lCqflEhSNzN/h6pvelo1ai+SfG6wB88keTTJjYuYcx7G+boYrPtQ\n",
+       "kvNJPjPP+eZlzO+PpSS/SvJckuU5jzg3Y3x/7EjycJKnBnvxxQWMORdJvp/k5STPbrBmsm5W1cx+\n",
+       "sfLo5hRwHXAF8BRww5o1twMPDX7/YeDxWc6wVX6NuRcfAf5m8Pt9l/NeDK37KfA/wD8teu4FfU1c\n",
+       "A/wvsGtwvGPRcy9wLw4C//HmPgCvAtsXPfsm7cc/AjcDz65zfuJuzvrO3Tc9rRq5F1X1WFW9Pjh8\n",
+       "gr7vDxjn6wLga8CPgN/Pc7g5GmcfPgv8uKrOAFTVK3OecV7G2YvfAVcPfn818GpVnZ/jjHNTVb8A\n",
+       "XttgycTdnHXcfdPTqnH2YthXgIc2daLFGbkXSXay8s395l9f0fHFoHG+JvYA70rysyTHknxhbtPN\n",
+       "1zh7cRj4+yQvAU8D/zan2baiibs56kchJ+WbnlaN/WdK8gngy8DHNm+chRpnL74LfKOqKkl4+9dI\n",
+       "B+PswxXAB4BbgauAx5I8XlUnN3Wy+RtnL74JPFVVS0neC/wkyU1V9adNnm2rmqibs477TN/0dIkb\n",
+       "Zy8YvIh6GNhXVRv9Z9mlbJy9+CAr75WAleern0pyrqqOzmfEuRhnH04Dr1TVG8AbSX4O3AR0i/s4\n",
+       "e/FR4NsAVfXrJL8Frmfl/TeXm4m7OevHMm+96SnJlay86WntN+dR4F8ANnrTUwMj9yLJu4EHgc9X\n",
+       "1akFzDgvI/eiqv62qt5TVe9h5bn7vzYLO4z3/fFfwD8k2ZbkKlZePHt+znPOwzh7cQK4DWDwfPl6\n",
+       "4DdznXLrmLibM71zL9/09JZx9gL4FvBO4L7BHeu5qtq7qJk3y5h70d6Y3x8nkjwMPAP8BThcVe3i\n",
+       "PubXxHeAB5I8zcqN6Ner6g8LG3oTJfkh8HFgR5LTwD2sPKKbupu+iUmSGvJ/sydJDRl3SWrIuEtS\n",
+       "Q8Zdkhoy7pLUkHGXpIaMuyQ1ZNwlqaH/A5XPsQXhTFKZAAAAAElFTkSuQmCC\n"
+      ],
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1077647d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "s = fb_obj.sleep\n",
+    "a = fb_obj.activity\n",
+    "fig,ax = plotter.plot_np_data()"
    ]
   },
   {
